k8s/producao/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    environment: production
    component: ui
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    environment: production
    component: api
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
    environment: production
    component: storage
